2011-05-19  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (bytevector port): fixed get-u8 and lookahead-u8,
	when a port reached EOF it returned -1, instead of EOF.

	* boot/compiler.scm: implemented R6RS let-syntax letrec-syntax and
	define-syntax.

2011-05-18  Takashi Kato  <ktakashi@ymail.com>

	* lib/rnrs/r5rs.scm (rnrs r5rs): added r5rs compatible files.

	* src/null.stub (rnrs hashtables): added hashtable procedures.

2011-05-17  Takashi Kato  <ktakashi@ymail.com>

	* boot/lib/macro.scm (syntax-case): fixed renaming problem.

	* boot/compiler.scm (pass1/body): refactored for internal macro.

2011-05-12  Takashi Kato  <ktakashi@ymail.com>

	* src/library.c (library): implemented efficient import spec resolver.

2011-05-11  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (flonum): added flomun operations.

	* sitelib/sagittarius/cgen/base.scm (cgen): fixed remainer proc.

2011-05-10  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub, src/port.c (rnrs io ports): make it pass R6RS test
	suite.
	(fixnum): fixed fxodd? fxeven? fixnum-width, fxand, fxior and fxxor.

2011-05-09  Takashi Kato  <ktakashi@ymail.com>

	* src/codec.c (latin-1-codec): added implementation.

	* src/record.c (record): fixed record-generative?, record-predicate,
	record-accessor and record-mutator.

2011-05-07    <ktakashi@ymail.com>

	* src/null.stub (rnrs base): fixed '/' error.

2011-05-06  Takashi Kato  <ktakashi@ymail.com>

	* src/exceptions.c (rnrs conditions): added missing condition and fixed
	some typos.

	* boot/lib/scmlib.scm (list-sort vector-sort vector-sort!): deleted
	duplicates.

	* src/null.stub (utf16->string utf32->string): fixed endian detection.
	(assoc): fixed typo (assc -> assoc)

	* src/sagittarius/error.h, src/error.c: added implementation of
	implementation-restriction-violation

	* src/null.stub (null): added some fixnum arithmetic operations

	* src/reader.c (read_prefixed_number): fixed mis-reading #i#xf/e case.
